Bug 1358053 - Remove DataSourceSurface assertion when doing snapshot in WebGL; r=jgilbert

MozReview-Commit-ID: 6LhmY1ouNZ9